--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
         <div class="container mx-auto px-6">
             <div class="text-center">
                 <h1 class="text-5xl font-bold bg-gradient-to-r from-blue-400 to-white bg-clip-text text-transparent mb-2">
-                    <i class="fas fa-piggy-bank mr-4"></i>ZalOfficial
+                    <i class="fas fa-piggy-bank mr-4"></i>TheEnd
                 </h1>
             </div>
         </div>
